@@ -9,8 +9,11 @@ import uz.pdp.apporder.entity.Order;
 import uz.pdp.apporder.entity.OrderProduct;
 import uz.pdp.apporder.entity.enums.OrderStatusEnum;
 import uz.pdp.apporder.entity.enums.PaymentType;
+import uz.pdp.apporder.entity.promotion.*;
 import uz.pdp.apporder.exceptions.RestException;
 import uz.pdp.apporder.payload.*;
+import uz.pdp.apporder.payload.promotion.AcceptPromotionDTO;
+import uz.pdp.apporder.payload.promotion.OrderWithPromotionDTO;
 import uz.pdp.apporder.repository.*;
 import uz.pdp.appproduct.aop.AuthFeign;
 import uz.pdp.appproduct.dto.ClientDTO;
@@ -20,7 +23,6 @@ import uz.pdp.appproduct.repository.ProductRepository;
 import uz.pdp.appproduct.util.CommonUtils;
 import uz.pdp.appproduct.util.RestConstants;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
@@ -40,6 +42,11 @@ public class OrderServiceImpl implements OrderService {
     private final AuthFeign openFeign;
     private final BranchService branchService;
     private final PriceForDeliveryRepository priceForDeliveryRepository;
+
+    private final PromotionsService promotionsService;
+    private final DiscountService discountService;
+
+    private final PromotionRepository promotionRepository;
 
     @Override
     public ApiResult<?> saveOrder(OrderUserDTO orderDTO) {
@@ -65,7 +72,7 @@ public class OrderServiceImpl implements OrderService {
     @Override
     public ApiResult<List<OrderForCurrierDTO>> getOrdersForCurrierByOrderedDate(UUID id, LocalDateTime localDate) {
         List<Order> ordersList = orderRepository.findAllByCurrierIdAndOrderedAtOrderByOrderedAtDesc(id, localDate).orElseThrow(() -> RestException.restThrow("Bu sanada hech qanaqa zakaz bo'lmagan", HttpStatus.NOT_FOUND));
-        List<OrderForCurrierDTO> orderForCurrierDTOList = ordersList.stream().map(this::mapOrderToOrderForHistory).toList();
+        List<OrderForCurrierDTO> orderForCurrierDTOList = ordersList.stream().map(this::mapOrderToOrderForHistory).collect(Collectors.toList());
         return ApiResult.successResponse("All orders of Currier in this Date ", orderForCurrierDTOList);
     }
 
@@ -77,8 +84,68 @@ public class OrderServiceImpl implements OrderService {
     @Override
     public ApiResult<List<OrderForCurrierDTO>> getAllOrdersForCurrier(UUID id) {
         List<Order> orders = orderRepository.findAllByCurrierIdOrderByOrderedAtDesc(id).orElseThrow(() -> RestException.restThrow("Bu currierning zakazlari yo'q", HttpStatus.NOT_FOUND));
-        List<OrderForCurrierDTO> orderForCurrierDTOList = orders.stream().map(this::mapOrderToOrderForHistory).toList();
+        List<OrderForCurrierDTO> orderForCurrierDTOList = orders.stream().map(this::mapOrderToOrderForHistory).collect(Collectors.toList());
         return ApiResult.successResponse("Currier ning barcha zakazlari ro'yxati", orderForCurrierDTOList);
+    }
+
+    @Override
+    public ApiResult<OrderWithPromotionDTO> getOrderPromotions(Long orderId) {
+
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> RestException.restThrow("ORDER NOT FOUND", HttpStatus.NOT_FOUND));
+
+        Float overAllSum = order.getOverAllSum();
+        List<OrderProduct> orderProducts = order.getOrderProducts();
+        Float deliverySum = order.getDeliverySum();
+
+        Promotion promotion = promotionRepository.get1ActivePromotion(System.currentTimeMillis())
+                .orElse(null);
+
+
+        if (Objects.nonNull(promotion)) {
+            DiscountPromotion discountPromotion = promotion.getDiscountPromotion();
+            DeliveryPromotion deliveryPromotion = promotion.getDeliveryPromotion();
+            BonusProductPromotion bonusProductPromotion = promotion.getBonusProductPromotion();
+
+            if (Objects.nonNull(deliveryPromotion)) {
+                Float moreThan = deliveryPromotion.getMoreThan();
+                Long startTime = deliveryPromotion.getStartTime();
+                Long endTime = deliveryPromotion.getEndTime();
+                long now = System.currentTimeMillis();
+                if (overAllSum > moreThan) {
+                    if (now > startTime && now < endTime) {
+                        deliverySum = 0F;
+                    }
+                }
+            }
+
+            if (Objects.nonNull(bonusProductPromotion)) {
+                Float moreThan = bonusProductPromotion.getMoreThan();
+                Short bonusCount = bonusProductPromotion.getBonusCount();
+                Product product = bonusProductPromotion.getProduct();
+
+                if (overAllSum > moreThan) {
+                    orderProducts.add(new OrderProduct(order, product, bonusCount, product.getPrice()));
+                }
+            }
+
+            if (Objects.nonNull(discountPromotion)) {
+                Float moreThan = discountPromotion.getMoreThan();
+                Float discount = discountPromotion.getDiscount();
+                if (overAllSum > moreThan) {
+                    overAllSum = overAllSum - (overAllSum * discount / 100);
+                }
+            }
+            order.setOverAllSum(overAllSum);
+            order.setDeliverySum(deliverySum);
+            order.setOrderProducts(orderProducts);
+        }
+
+        return ApiResult.successResponse(
+                new OrderWithPromotionDTO(mapOrderToOrderDTO(order),
+                        promotionsService.promotionToPromotionDTO(promotion)
+                )
+        );
     }
 
     @Override
@@ -134,6 +201,8 @@ public class OrderServiceImpl implements OrderService {
             order.setStatusEnum(OrderStatusEnum.NEW);
         else
             order.setStatusEnum(OrderStatusEnum.PAYMENT_WAITING);
+
+        Float overallSum = calculateProductsSum(order);
 
         order.setBranch(branch);
         order.setPaymentType(orderDTO.getPaymentType());
@@ -228,6 +297,41 @@ public class OrderServiceImpl implements OrderService {
         return ApiResult.successResponse("Order successfully updated");
     }
 
+    @Override
+    public ApiResult<OrderDTO> acceptOrderPromotion(AcceptPromotionDTO acceptPromotionDTO) {
+        Long promotionId = acceptPromotionDTO.getPromotionId();
+        Promotion promotion = promotionRepository.findById(promotionId)
+                .orElseThrow(() -> RestException.restThrow("PROMOTION_NOT_FOUND", HttpStatus.NOT_FOUND));
+
+        Long orderId = acceptPromotionDTO.getOrderId();
+
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> RestException.restThrow("ORDER_NOT_FOUND", HttpStatus.NOT_FOUND));
+
+        if (acceptPromotionDTO.isProductPromotion()) {
+
+            ProductPromotion productPromotion = promotion.getProductPromotion();
+
+            Product product = productPromotion
+                    .getBonusProducts()
+                    .stream()
+                    .filter(p -> p.getId().equals(acceptPromotionDTO.getChosenProductId()))
+                    .findFirst()
+                    .orElseThrow(() -> RestException.restThrow("PRODUCT_NOT_FOUND", HttpStatus.NOT_FOUND));
+
+
+            if (Objects.nonNull(product)) {
+                List<OrderProduct> orderProducts = order.getOrderProducts();
+
+                orderProducts.add(new OrderProduct(order, product, (short) 1, product.getPrice()));
+                order.setOrderProducts(orderProducts);
+            }
+        }
+
+        return ApiResult.successResponse(mapOrderToOrderDTO(order));
+
+    }
+
 
     // TODO: 10/3/22 Eng yaqin branchni aniqlash
 
@@ -292,6 +396,8 @@ public class OrderServiceImpl implements OrderService {
 
         orderDTO.setProductsSum(calculateProductsSum(order));
 
+        orderDTO.setDiscountSum(calculateDiscountSumForOrder(order));
+
         String token = CommonUtils.getCurrentRequest().getHeader(RestConstants.AUTHORIZATION_HEADER);
 
         orderDTO.setClientDTO(Objects.requireNonNull(openFeign.getClientDTO(order.getClientId(), token).getData()));
@@ -305,12 +411,23 @@ public class OrderServiceImpl implements OrderService {
         return orderDTO;
     }
 
+    private Float calculateDiscountSumForOrder(Order order) {
+
+        List<Integer> collect = order.getOrderProducts()
+                .stream()
+                .map(OrderProduct::getId)
+                .collect(Collectors.toList());
+
+        return discountService.getDiscountsSumOfProducts(collect).orElse(0F);
+    }
+
     private Float calculateProductsSum(Order order) {
-        float sum = 0F;
-        for (OrderProduct orderProduct : order.getOrderProducts()) {
-            sum += orderProduct.getUnitPrice();
-        }
-        return sum;
+        double sum = order
+                .getOrderProducts()
+                .stream()
+                .mapToDouble(value -> value.getUnitPrice() * value.getQuantity())
+                .sum();
+        return (float) sum;
     }
 
     private void setOrderTimeByStatus(Order order, OrderDTO orderDTO) {
@@ -348,7 +465,8 @@ public class OrderServiceImpl implements OrderService {
                         .getQuantity(),
                 product.getPrice());
     }
-    public OrderForCurrierDTO mapOrderToOrderForHistory(Order order){
+
+    public OrderForCurrierDTO mapOrderToOrderForHistory(Order order) {
         OrderForCurrierDTO orderForCurrierDTO = new OrderForCurrierDTO();
 
         Float totalProductsPrice = calculateProductsSum(order);
@@ -370,6 +488,4 @@ public class OrderServiceImpl implements OrderService {
         return orderForCurrierDTO;
 
     }
-
-
 }
